<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_move_detection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="32dp"
        android:text="@string/pendeteksi"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_move_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/import_gallery"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_move_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/deskripsi"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_move_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/bantuan"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_move_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/tentang"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

</LinearLayout>